Fix overflow of sidebar

--- a/site/public/css/server.css
+++ b/site/public/css/server.css
@@ -434,6 +434,7 @@ table tr.table-header {
 
 .forum_content {
     flex-grow: 1;
+    max-height: 98vh;
     padding: 0px;
 }
 
@@ -1031,6 +1032,12 @@ table .instructor .two-options{
     padding: 20px;
     margin-left: -5px;
     padding-top: 30px;
+}
+
+div.sticky {
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 10px;
 }
 
 #sidebar.collapsed #nav-buttons {
